2004-02-07  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* technical.tex: Add noise correlation matrix for
	noise sources.

2004-02-05  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* technical.tex: Added a simple example to the MNA 
	documentation.

2004-02-04  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* technical.tex (section*{Modified Nodal Analysis}): Wrote
	documentation about basic idea of MNA.

2004-01-31  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection*{Symmetrical transformer}): Added
	figures for symmetrical trafo and normal two winding trafo.  
	Documented MNA entries for symmetrical transformer.  Switched
	over to IEEtran bibliography style.
	
2004-01-30  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection*{Transformer}): Documented
	DC simulation of ideal transformer.

2004-01-29  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am: Added rules for bibliography creation.

	* technical.tex (subsection*{Current controlled voltage source}): 
	Added description of CCVS for use in DC analysis.
	Added figures for VCCS, VCVS, CCVS and CCCS.  Added bibliography.

2004-01-28  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (section*{Extensions to the MNA}): Documented
	VCCS, VCVS and CCCS for use in DC analysis.

2003-12-26  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (CLEANFILES): Updated clean files.