@@ -31,10 +31,10 @@ Single
 	 4800 2925 5325 2925 5325 1875 4800 1875
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
 	1 1 1.00 90.00 120.00
-	 5700 2550 5700 2250
+	 5700 2250 5700 2550
 2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 1 0 2
 	1 1 1.00 90.00 180.00
-	 5812 1875 6112 1875
+	 6142 1875 5842 1875
 4 0 0 50 0 0 12 0.0000 0 135 90 4350 3000 4\001
 4 0 0 50 0 0 12 0.0000 0 135 90 6525 3000 3\001
 4 0 0 50 0 0 12 0.0000 0 135 90 6525 1950 2\001
