@@ -35,7 +35,7 @@ Single
 	 4800 2925 5325 2925 5325 1875 4800 1875
 2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 1 2
 	1 1 1.00 90.00 180.00
-	 5843 1875 6143 1875
+	 6109 1875 5809 1875
 4 0 0 50 0 0 12 0.0000 0 135 90 6525 3000 3\001
 4 0 0 50 0 0 12 0.0000 0 135 90 6525 1950 2\001
 4 0 0 50 0 0 12 0.0000 0 135 90 4350 1950 1\001
