@@ -7,7 +7,7 @@ Letter
 Single
 -2
 1200 2
-6 2632 1626 2879 1784
+6 2625 1575 2925 1800
 4 0 0 50 0 0 12 0.0000 0 135 60 2632 1761 I\001
 4 0 0 50 0 0 8 0.0000 0 75 165 2714 1784 out\001
 -6
@@ -37,11 +37,11 @@ Single
 	 2100 2100 2100 2700
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
 	1 1 1.00 90.00 120.00
-	 2475 2550 2475 2250
+	 2475 2250 2475 2550
 2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 1 0 2
 	1 1 1.00 90.00 180.00
-	 2587 1875 2887 1875
-4 0 0 50 0 0 12 0.0000 0 135 90 3300 3000 3\001
-4 0 0 50 0 0 12 0.0000 0 135 90 3300 1950 2\001
+	 2888 1875 2588 1875
 4 0 0 50 0 0 12 0.0000 0 135 90 1125 1950 1\001
 4 0 0 50 0 0 12 0.0000 0 135 90 1125 3000 4\001
+4 0 0 50 0 0 12 0.0000 0 135 90 3300 1950 2\001
+4 0 0 50 0 0 12 0.0000 0 135 90 3300 3000 3\001
