@@ -7,7 +7,7 @@ Letter
 Single
 -2
 1200 2
-6 2655 1612 2895 1777
+6 2625 1575 2925 1800
 4 0 0 50 0 0 12 0.0000 0 135 60 2655 1747 I\001
 4 0 0 50 0 0 8 0.0000 0 75 165 2730 1777 out\001
 -6
@@ -37,10 +37,10 @@ Single
 	 2100 2100 2100 2700
 2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 1 0 2
 	1 1 1.00 90.00 180.00
-	 2925 1875 2625 1875
+	 2595 1875 2895 1875
 4 0 0 50 0 0 12 0.0000 0 135 90 3300 3000 3\001
 4 0 0 50 0 0 12 0.0000 0 135 90 3300 1950 2\001
-4 0 0 50 0 0 12 0.0000 0 135 90 1125 1950 1\001
 4 0 0 50 0 0 12 0.0000 0 135 90 1125 3000 4\001
 4 0 0 50 -1 0 16 0.0000 4 120 135 2625 2100 +\001
 4 0 0 50 -1 0 16 0.0000 4 15 150 2632 2850 -\001
+4 0 0 50 0 0 12 0.0000 0 135 90 1125 1950 1\001
