@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: cccs.cpp,v 1.4 2004/01/30 21:40:35 ela Exp $
+ * $Id: cccs.cpp,v 1.5 2004/02/10 21:21:10 ela Exp $
  *
  */
 
@@ -77,7 +77,7 @@ void cccs::calcS (nr_double_t frequency) {
 void cccs::calcY (void) {
   nr_double_t g = getPropertyDouble ("G");
   setC (1, 1, +1.0); setC (1, 2, +0.0); setC (1, 3, +0.0); setC (1, 4, -1.0);
-  setB (1, 1, -1/g); setB (1, 2, +1.0); setB (1, 3, -1.0); setB (1, 4, +1/g);
+  setB (1, 1, +1/g); setB (1, 2, +1.0); setB (1, 3, -1.0); setB (1, 4, -1/g);
   setD (1, 0.0);
   setE (1, 0.0);
 }
