@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: ccvs.cpp,v 1.3 2004/01/30 21:40:35 ela Exp $
+ * $Id: ccvs.cpp,v 1.4 2004/02/10 21:21:10 ela Exp $
  *
  */
 
@@ -75,10 +75,10 @@ void ccvs::calcS (nr_double_t frequency) {
 }
 
 void ccvs::calcY (void) {
-  setB (1, 1, -1.0); setB (1, 2, +0.0); setB (1, 3, +0.0); setB (1, 4, +1.0); 
-  setB (2, 1, +0.0); setB (2, 2, -1.0); setB (2, 3, +1.0); setB (2, 4, +0.0); 
-  setC (1, 1, +0.0); setC (1, 2, +1.0); setC (1, 3, -1.0); setC (1, 4, +0.0); 
-  setC (2, 1, +1.0); setC (2, 2, +0.0); setC (2, 3, +0.0); setC (2, 4, -1.0); 
+  setB (1, 1, +1.0); setB (1, 2, +0.0); setB (1, 3, +0.0); setB (1, 4, -1.0);
+  setB (2, 1, +0.0); setB (2, 2, -1.0); setB (2, 3, +1.0); setB (2, 4, +0.0);
+  setC (1, 1, +0.0); setC (1, 2, +1.0); setC (1, 3, -1.0); setC (1, 4, +0.0);
+  setC (2, 1, +1.0); setC (2, 2, +0.0); setC (2, 3, +0.0); setC (2, 4, -1.0);
   setD (1, - getPropertyDouble ("G"));
   setD (2, 0.0);
   setE (1, 0.0);
