@@ -1,3 +1,8 @@
+2004-02-10  Stefan Jahn  <stefan@lkcc.org>
+
+	* technical.tex: Fixed descriptions of MNA stamps of operational
+	amplifier, ccvs, cccs, vccs and vcvs.
+
 2004-02-07  Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 
 	* technical.tex: Add noise correlation matrix for
